kubernetes/http-api-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: http-api-server
spec:
    finalizers:
        - kubernetes
