kubernetes/http-api-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: http-api-server
  name: http-api-server-service
  labels:
    app: http-api-server
spec:
  ports:
  - port: 80
    targetPort: 8444
    protocol: TCP
    name: http
  selector:
    app: http-api-server
