kubernetes/http-api-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: http-api-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: http-api-server
  name: http-api-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-api-server-service
            port:
              number: 80
